--- a/css/style.css
+++ b/css/style.css
@@ -735,6 +735,10 @@ body {
     cursor: pointer;
     user-select: none;
 }
+#applyBg{
+    border-top: 1px solid black;
+    font-weight: bold;
+}
 
 .start-menu-item:hover {
     background: #000080;
