--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ body {
     height: 200px;
     border-radius: 50%;
     background: #34495e;
-    background-image: url('../assets/sprites/my_sprite.png');
+    background-image: url('../assets/sprites/my_sprite.gif');
     background-size: cover;
     image-rendering: pixelated;
     border: 1px solid #c0c0c0;
